# visual-rag

./: .gitignore  README.md  environment.yml  index.html  pyproject.toml  run_server.sh
app/: agent.py  api.py  ocr.py  rag.py  tools.py
